# Mandala

./: .gitignore  CMakeLists.txt  Mandela  Mandela.pro  README.md
include/: BottomWidget.hpp  CenterWidget.hpp  MainWindow.h  TopWidget.hpp
include/model/: CommandDraw.hpp  CommandDrawDot.hpp  CommandDrawGrid.hpp  CommandDrawLine.hpp  CommandDrawMandala.hpp  CommandDrawing.hpp  CommandDrawingDot.hpp  Drawer.hpp  Drawing.hpp  DrawingCommand.hpp  QPenSingleton.hpp  Stroke.hpp  transform.hpp
include/view/: BottomWidget.hpp  CenterWidget.hpp  DrawingAreaWidget.hpp  MainWindow.hpp  TopWidget.hpp
src/: BottomWidget.cpp  CenterWidget.cpp  MainWindow.cpp  TopWidget.cpp  main.cpp
src/model/: CommandDraw.cpp  CommandDrawDot.cpp  CommandDrawGrid.cpp  CommandDrawLine.cpp  CommandDrawMandala.cpp  CommandDrawing.cpp  CommandDrawingDot.cpp  Drawer.cpp  Drawing.cpp  DrawingCommand.cpp  QPenSingleton.cpp  Stroke.cpp  transform.cpp
src/view/: BottomWidget.cpp  CenterWidget.cpp  DrawingAreaWidget.cpp  MainWindow.cpp  TopWidget.cpp  main.cpp
ui/: BottomWidget.ui  CenterWidget.ui  MainWindow.ui  TopWidget.ui
